--- a/app/templates/handicraft/base.html
+++ b/app/templates/handicraft/base.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     <form class="form-group" method="post">
+        
+        {# Form's CSRF token #}
+        {{ form.csrf_token }}
+
         <h2 class="text-center">New Handicraft</h2>
 
         <div class="form-group {% if error %}has-error{% endif %}">
