Add CSRF control to sign in page

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,6 +9,7 @@
         var state = "{{state}}"
         var google_client_id = "{{google_client_id}}"
         var facebook_client_id = "{{facebook_client_id}}"
+        var csrf_token = "{{ csrf_token() }}"
     </script>
 
     <div class="row row-centered">
